# clip-template

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
src/: clipboardhandler.cpp  clipboardhandler.h  configreader.cpp  configreader.h  keyboardhandler.cpp  keyboardhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  templatemanager.cpp  templatemanager.h
